@@ -13,6 +13,7 @@ critic_config = .perlcriticrc
 Test::Perl::Critic      = 0
 Test::CPAN::Meta        = 0
 Pod::Coverage::TrustPod = 0
+Test::Version           = 0.07; xenoterracide's module + bugfixes
 
 [LatestPrereqs]
 :version = 0.4
