@@ -7,11 +7,9 @@ use 5.010001; # We use the smart match operator
 
 use Dist::Zilla::Plugin::Test::CPAN::Changes            qw();
 use Dist::Zilla::Plugin::CompileTests                   qw();
-use Dist::Zilla::Plugin::ConsistentVersionTest          qw();
 use Dist::Zilla::Plugin::CriticTests 1.102280           qw();
 use Dist::Zilla::Plugin::DistManifestTests              qw();
 use Dist::Zilla::Plugin::EOLTests 0.02                  qw(); # Also checks for trailing whitespace
-use Dist::Zilla::Plugin::HasVersionTests                qw();
 use Dist::Zilla::Plugin::KwaliteeTests                  qw();
 use Dist::Zilla::Plugin::MetaTests                      qw();
 use Dist::Zilla::Plugin::MinimumVersionTests            qw();
@@ -22,6 +20,7 @@ use Dist::Zilla::Plugin::PodSyntaxTests                 qw();
 use Dist::Zilla::Plugin::PortabilityTests               qw();
 use Dist::Zilla::Plugin::SynopsisTests                  qw();
 use Dist::Zilla::Plugin::UnusedVarsTests                qw();
+use Dist::Zilla::Plugin::Test::Version 0.001002         qw(); # New name
 use Dist::Zilla::Plugin::Test::Pod::LinkCheck           qw();
 use Dist::Zilla::Plugin::Test::CPAN::Meta::JSON 0.003   qw(); # Prunes itself when META.json isn't present
 
@@ -45,10 +44,6 @@ Simply add the following near the end of F<dist.ini>:
 
     [@TestingMania]
 
-It includes the most recent version (as of release time) of the following
-plugins, in their default configuration. Note that not all the plugins
-are actually I<used> by default.
-
 =head2 Testing plugins
 
 =over 4
@@ -57,12 +52,6 @@ are actually I<used> by default.
 
 L<Dist::Zilla::Plugin::CompileTests>, which performs tests to syntax check your
 dist.
-
-=item *
-
-L<Dist::Zilla::Plugin::ConsistentVersionTest>, which tests that all modules in
-the dist have the same version. See L<Test::ConsistentVersion> for details. This
-is not enabled by default; see L</"Enabling Tests">.
 
 =item *
 
@@ -85,8 +74,9 @@ used (and also checks for trailing whitespace). See L<Test::EOL> for details.
 
 =item *
 
-L<Dist::Zilla::Plugin::HasVersionTests>, which tests that your dist has version
-numbers. See L<Test::HasVersion> for what that means.
+L<Dist::Zilla::Plugin::Test::Version>, which tests that your dist has
+version numbers, and that they are valid. See L<Test::Version> for exactly
+what that means.
 
 =item *
 
@@ -194,12 +184,11 @@ sub configure {
         'Test::CPAN::Changes'   => $self->config_slice('changelog'),
         'Test::CPAN::Meta::JSON'=> 1, # prunes itself if META.json isn't there
         'Test::Pod::LinkCheck'  => 1,
+        'Test::Version'         => 1,
         CompileTests            => 1,
-        ConsistentVersionTest   => 0, # finnicky and annoying
         CriticTests             => $self->config_slice('critic_config'),
         DistManifestTests       => 1,
         EOLTests                => 1,
-        HasVersionTests         => 1,
         KwaliteeTests           => 1,
         MetaTests               => 1, # should only be loaded if MetaYAML is loaded, or the file exists in the dist
         MinimumVersionTests     => 1,
